--- a/CSS Advanced/style.css
+++ b/CSS Advanced/style.css
@@ -10,14 +10,12 @@ html {
     scroll-behavior: smooth;
 }
 
-body {
-    background-color: #fff;
-}
 
 /* Header */
 header {
-    background-color: #ffffff;
+    background-color: transparent;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    float:;
 }
 
 header nav {
@@ -54,8 +52,10 @@ header nav ul li a:hover {
     flex-direction: column;
     align-items: center;
     padding: 5rem 3rem;
-    background-color: #f5f5f5;
+    background-image: url("image/Object.png");
+    background-size: cover;
     text-align: center;
+    height: 100vh;
 }
 
 .banner .main-title {
@@ -65,14 +65,14 @@ header nav ul li a:hover {
 
 .banner .main-title h1 {
     font-size: 3rem;
-    color: #222;
+    color: white;
     margin-bottom: 1rem;
 }
 
 .banner .main-title span {
     display: inline-block;
     font-size: 1.2rem;
-    color: #555;
+    color: white;
     margin: 0 1rem;
 }
 
@@ -98,7 +98,7 @@ header nav ul li a:hover {
 
 .banner > div:last-child h2 {
     font-size: 2.5rem;
-    color: #222;
+    color: white;
     margin-bottom: 3rem;
 }
 
@@ -147,8 +147,9 @@ main > section:nth-child(2) {
     justify-content: space-around;
     align-items: center;
     padding: 5rem 3rem;
-    background-color: #ffffff;
+    background-color: mediumpurple;
     gap: 3rem;
+
 }
 
 main > section:nth-child(2) > div:first-child img {
@@ -163,7 +164,7 @@ main > section:nth-child(2) > div:last-child {
 
 main > section:nth-child(2) blockquote {
     font-size: 1.3rem;
-    color: #222;
+    color: white;
     margin-bottom: 1.5rem;
     font-style: italic;
     line-height: 1.6;
@@ -171,14 +172,15 @@ main > section:nth-child(2) blockquote {
 
 main > section:nth-child(2) h3 {
     font-size: 1.1rem;
-    color: #222;
+    color: white;
     margin-bottom: 0.3rem;
     font-weight: 700;
 }
 
 main > section:nth-child(2) p {
     font-size: 0.9rem;
-    color: #555;
+    color: white;
+
 }
 
 /* Most Popular Tutorials Section */
@@ -192,6 +194,9 @@ main > section:nth-child(3) h2 {
     font-size: 2.5rem;
     color: #222;
     margin-bottom: 3rem;
+}
+main > section:nth-child(3) h2 span {
+    color: mediumpurple;
 }
 
 main > section:nth-child(3) > div {
@@ -245,7 +250,7 @@ main > section:nth-child(3) > div > div img {
 
 main > section:nth-child(3) > div > div h4 {
     font-size: 1rem;
-    color: #222;
+    color: mediumpurple;
 }
 
 main > section:nth-child(3) > div > div:nth-child(5) {
@@ -270,16 +275,19 @@ main > section:nth-child(3) > div > p:last-child {
 /* Free Membership Section */
 main > section:nth-child(4) {
     padding: 5rem 3rem;
-    background-color: #ffffff;
+    background-color: black;
     text-align: center;
 }
 
 main > section:nth-child(4) h2 {
     font-size: 2.5rem;
-    color: #222;
+    color: white;
     margin-bottom: 3rem;
 }
 
+main > section:nth-child(4) h2 span {
+    color: mediumpurple;
+}
 main > section:nth-child(4) > div {
     display: inline-block;
     background-color: #f0f0f0;
@@ -344,6 +352,8 @@ main > section:nth-child(5) h2 {
     text-align: center;
 }
 
+
+
 main > section:nth-child(5) > div {
     display: flex;
     justify-content: space-around;
@@ -380,7 +390,7 @@ main > section:nth-child(5) > div > div > div:nth-child(even) {
 
 /* Footer */
 footer {
-    background-color: #222;
+    background-color: black;
     padding: 3rem;
 }
 
