--- a/headphones/3-styles.css
+++ b/headphones/3-styles.css
@@ -434,76 +434,4 @@ main .container .content {
     color: purple;
 }
 
-/*start footer */
-
-.footer {
-    background-color: #071426; /* نفس اللون الداكن في الصورة */
-    color: #ccc;
-    padding: 20px 0;
-    text-align: center;
-}
-
-.footer .container {
-    max-width: 1000px;
-    margin: 0 auto;
-    padding: 0 20px;
-}
-
-.footer-content {
-    display: flex;
-    align-items: center;
-    justify-content: start;
-    flex-wrap: wrap;
-    gap: 30px;
-}
-
-.footer-logo img {
-    height: 35px;
-}
-
-.footer p {
-    color: #666;
-    font-size: 0.8rem;
-    margin: 10px 0;
-    flex: 1;
-    text-align: center;
-}
-
-.social-media {
-    display: flex;
-    gap: 15px;
-}
-
-.social-media a {
-    color: #fff;
-    font-size: 1.2rem;
-    transition: color 0.3s ease;
-    text-decoration: none;
-}
-
-.social-media a:hover {
-    color: #ff4c4c; /* لون أحمر بسيط عند الـ hover */
-}
-
-/* ✅ جعل الفوتر متجاوب في الموبايل */
-@media (max-width: 480px) {
-    .footer-content {
-        flex-direction: column;
-        align-items: center;
-        gap: 10px;
-    }
-
-    .footer p {
-        order: 3;
-    }
-
-    .social-media {
-        order: 2;
-    }
-
-    .footer-logo {
-        order: 1;
-    }
-}
-
-
+/*end contact section */
